fixed too long link issue, fixed too long search issue

--- a/backend/server/public/css/ads.scss
+++ b/backend/server/public/css/ads.scss
@@ -60,6 +60,7 @@
 
   p {
     font-size: 1em;
+    word-break: break-all;
   }
 }
 
